# uutils-awk

./: .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml  rustfmt.toml
.github/workflows/: ci.yml  code-quality.yml
interpreter/src/: ir.rs  lib.rs  types.rs  vm.rs
interpreter/src/ir/: lower.rs
lexer/: Cargo.toml
lexer/src/: lib.rs  tests.rs
parser/: Cargo.toml
parser/src/: ast.rs  diagnostics.rs  idempotency.rs  lex.rs  lib.rs  pratt.rs  sexpr.rs  tests.rs
src/: main.rs  utils.rs
tests/: awk.rs
tests/by-util/: test_awk.rs
