[package]
name = "parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lexer.workspace = true
either.workspace = true
memchr.workspace = true
thiserror.workspace = true
tracing.workspace = true
smallvec.workspace = true
bumpalo.workspace = true
hashbrown.workspace = true
allocator-api2.workspace = true
ariadne = "0.6.0"

[lints]
workspace = true
